Add titles, paragraph and a list

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <title>Index</title>
     </head>
     <body>
-        
+        <h1>Main title</h1>
+        <p>The first paragraph of this page</p>
+        <h2>First subtitle</h2>
+        <p>the second paragraph of this page</p>
+        <h2>Second subtitle</h2>
+        <ul>
+            <li>List item 1</li>
+            <li>List item 2</li>
+            <li>List item 3</li>
+        </ul>
     </body>
 </html>
