--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <h1>Main title</h1>
-        <p>The first paragraph of this page</p>
+        <p>The first paragraph of this page.</p>
         <h2>First subtitle</h2>
-        <p>the second paragraph of this page</p>
+        <p>The second paragraph of this page.</p>
         <h2>Second subtitle</h2>
         <ul>
             <li>List item 1</li>
