Add list title link

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <p>The first paragraph of this page.</p>
         <h2>First subtitle</h2>
         <p>The second paragraph of this page.</p>
-        <h2>Second subtitle</h2>
-        <ul>
+        <h2><a href="#list" title="Short list" target="_blank">Second subtitle</a></h2>
+        <ul id="list">
             <li>List item 1</li>
             <li>List item 2</li>
             <li>List item 3</li>
