--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
             <li>List item 2</li>
             <li>List item 3</li>
         </ul>
+        <br/>
+        <figure>
+            <img src="images/Zozor.png" title="Image of Zozor" alt="Image of Zozor"/>
+            <figcaption>Image of Zozor</figcaption>
+        </figure>
     </body>
 </html>
