--- a/cv.html
+++ b/cv.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8"/>
-    <title>CV</title>
+    <title>Curriculum Vitae</title>
 </head>
 <body>
-    
+    <h1>WiWi-M</h1>
+    <p>Développeur web à venir</p>
+    <figure>
+        <a href="images/Zozor.png"><img src="images/Zozor_min.png" alt="Image de profil" title="Image de profil"/></a>
+        <figcaption>Image de profil</figcaption>
+    </figure>
+    <h2>Mon expérience</h2>
+    <ul>
+        <li>2013 à Aujourd'hui : Développeur dans un organisme X</li>
+        <li>2010 à 2012 : Développeur dans une PME Y</li>
+    </ul>
+    <h2>Mes compétences</h2>
+    <ul>
+        <li>Git</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>PHP</li>
+        <li>SQL</li>
+    </ul>
+    <h2>Ma formation</h2>
+    <p>Un DUT Services et Réseaux de Communication</p>
 </body>
