--- a/cv.html
+++ b/cv.html
@@ -6,17 +6,17 @@
 </head>
 <body>
     <h1>WiWi-M</h1>
-    <p>Développeur web à venir</p>
+    <h2>Développeur web à venir</h2>
     <figure>
         <a href="images/Zozor.png"><img src="images/Zozor_min.png" alt="Image de profil" title="Image de profil"/></a>
         <figcaption>Image de profil</figcaption>
     </figure>
-    <h2>Mon expérience</h2>
+    <h3>Mon expérience</h3>
     <ul>
         <li>2013 à Aujourd'hui : Développeur dans un organisme X</li>
         <li>2010 à 2012 : Développeur dans une PME Y</li>
     </ul>
-    <h2>Mes compétences</h2>
+    <h3>Mes compétences</h3>
     <ul>
         <li>Git</li>
         <li>HTML</li>
@@ -24,6 +24,6 @@
         <li>PHP</li>
         <li>SQL</li>
     </ul>
-    <h2>Ma formation</h2>
+    <h3>Ma formation</h3>
     <p>Un DUT Services et Réseaux de Communication</p>
 </body>
