--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <title>Index</title>
     </head>
     <body>
-        <h1>Main title</h1>
+        <header>
+            <h1>Main title</h1>
+        </header>
+        <nav>
+            
+        </nav>
         <p>The first paragraph of this page.</p>
         <h2>First subtitle</h2>
         <p>The second paragraph of this page.</p>
@@ -20,5 +25,8 @@
             <img src="images/Zozor.png" title="Image of Zozor" alt="Image of Zozor"/>
             <figcaption>Image of Zozor</figcaption>
         </figure>
+        <footer>
+
+        </footer>
     </body>
 </html>
