Rename style.css to cv.css, Add index.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Index</title>
+        <link rel="stylesheet" href="css/index.css"/>
+        <title>Learn HTML & CSS</title>
     </head>
     <body>
         <header>
@@ -11,20 +12,22 @@
         <nav>
             
         </nav>
-        <p>The first paragraph of this page.</p>
-        <h2>First subtitle</h2>
-        <p>The second paragraph of this page.</p>
-        <h2><a href="#list" title="Short list" target="_blank">Second subtitle</a></h2>
-        <ul id="list">
-            <li>List item 1</li>
-            <li>List item 2</li>
-            <li>List item 3</li>
-        </ul>
-        <br/>
-        <figure>
-            <img src="images/Zozor.png" title="Image of Zozor" alt="Image of Zozor"/>
-            <figcaption>Image of Zozor</figcaption>
-        </figure>
+        <section>
+            <p>The first paragraph of this page.</p>
+            <h2>First subtitle</h2>
+            <p>The second paragraph of this page.</p>
+            <h2><a href="#list" title="Short list" target="_blank">Second subtitle</a></h2>
+            <ul id="list">
+                <li>List item 1</li>
+                <li>List item 2</li>
+                <li>List item 3</li>
+            </ul>
+            <br/>
+            <figure>
+                <img src="images/Zozor.png" title="Image of Zozor" alt="Image of Zozor"/>
+                <figcaption>Image of Zozor</figcaption>
+            </figure>
+        </section>
         <footer>
 
         </footer>
