Add nav, background, header, footer and text style

--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="css/index.css"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"/> 
         <title>Learn HTML & CSS</title>
     </head>
     <body>
         <header>
-            <h1>Main title</h1>
+            <h1>Learn HTML & CSS</h1>
         </header>
         <nav>
-            
+            <ul>
+                <li><a href="index.html" title="Home">Home</a></li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Curriculum Vitae</li>
+            </ul>
         </nav>
         <section>
-            <p>The first paragraph of this page.</p>
-            <h2>First subtitle</h2>
-            <p>The second paragraph of this page.</p>
-            <h2><a href="#list" title="Short list" target="_blank">Second subtitle</a></h2>
-            <ul id="list">
-                <li>List item 1</li>
-                <li>List item 2</li>
-                <li>List item 3</li>
+            <h2>This website is an exercice for learning HTML and CSS</h2>
+            <ul>
+                <li>The HTML page lists the HTML tags used</li>
+                <li>The CSS page lists the CSS tags used</li>
+                <li>The Curriculum Vitae page is a demo</li>
             </ul>
             <br/>
             <figure>
@@ -29,7 +32,7 @@
             </figure>
         </section>
         <footer>
-
+            <h3>GNU General Public License v3.0</h3>
         </footer>
     </body>
 </html>
