--- a/cv.html
+++ b/cv.html
@@ -5,25 +5,41 @@
     <title>Curriculum Vitae</title>
 </head>
 <body>
-    <h1>WiWi-M</h1>
-    <h2>Développeur web à venir</h2>
-    <figure>
-        <a href="images/Zozor.png"><img src="images/Zozor_min.png" alt="Image de profil" title="Image de profil"/></a>
-        <figcaption>Image de profil</figcaption>
-    </figure>
-    <h3>Mon expérience</h3>
-    <ul>
-        <li>2013 à Aujourd'hui : Développeur dans un organisme X</li>
-        <li>2010 à 2012 : Développeur dans une PME Y</li>
-    </ul>
-    <h3>Mes compétences</h3>
-    <ul>
-        <li>Git</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>PHP</li>
-        <li>SQL</li>
-    </ul>
-    <h3>Ma formation</h3>
-    <p>Un DUT Services et Réseaux de Communication</p>
+    <nav class="section">
+        <h4>Menu</h4>
+    </nav>
+    <div>
+        <header class="section">
+            <h1>WiWi-M</h1>
+            <h2>Développeur web à venir</h2>
+            <figure>
+                <a href="images/Zozor.png"><img src="images/Zozor_min.png" alt="Image de profil" title="Image de profil"/></a>
+                <figcaption>Image de profil</figcaption>
+            </figure>
+        </header>
+        <section class="section">
+            <h3>Mon expérience</h3>
+            <ul>
+                <li>2013 à Aujourd'hui : Développeur dans un organisme X</li>
+                <li>2010 à 2012 : Développeur dans une PME Y</li>
+            </ul>
+        </section>
+        <section class="section">
+            <h3>Mes compétences</h3>
+            <ul>
+                <li>Git</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>PHP</li>
+                <li>SQL</li>
+            </ul>
+        </section>
+        <section class="section">
+            <h3>Ma formation</h3>
+            <p>Un DUT Services et Réseaux de Communication</p>
+        </section>
+        <footer class="section">
+            <h4>GNU General Public License v3.0</h4>
+        </footer>
+    </div>
 </body>
