Add minimal table

--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
                 <img src="images/Zozor.png" title="Image of Zozor" alt="Image of Zozor"/>
                 <figcaption>Image of Zozor</figcaption>
             </figure>
+            <table>
+                <caption>Table title</caption>
+                <tr>
+                    <th>Row1Column1</th>
+                    <th>Row1Column2</th>
+                    <th>Row1Column3</th>
+                </tr>
+                <tr>
+                    <td>Row2Column1</td>
+                    <td>Row2Column2</td>
+                    <td>Row2Column3</td>
+                </tr>
+                <tr>
+                    <td>Row3Column1</td>
+                    <td colspan="2">Row3Column2+3</td>
+                </tr>
+            </table>
         </section>
         <footer>
             <h3>GNU General Public License v3.0</h3>
