Add minimal form

--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
                     <td colspan="2">Row3Column2+3</td>
                 </tr>
             </table>
+            <form method="POST" action="form.php" >
+                <fieldset>
+                    <legend>Form</legend>
+                    <p>
+                        <label for="psuedo">Login</label>
+                        <input type="text" name="psuedo" id="psuedo" maxlength="10" placeholder="YourPsuedo" autofocus required/>
+                    </p>
+                    <p>
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password"/>
+                    </p>
+                    <input type="submit" value="Send form"/>
+                </fieldset>
+
+                
+            </form>
         </section>
         <footer>
             <h3>GNU General Public License v3.0</h3>
