--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
     <nav class="section">
         <h4>Menu</h4>
     </nav>
-    <div>
+    <div id="page">
         <header class="section">
             <h1>WiWi-M</h1>
             <h2>Développeur web à venir</h2>
@@ -17,27 +17,29 @@
                 <figcaption>Image de profil</figcaption>
             </figure>
         </header>
-        <section class="section">
-            <h3>Mon expérience</h3>
-            <ul>
-                <li>2013 à Aujourd'hui : Développeur dans un organisme X</li>
-                <li>2010 à 2012 : Développeur dans une PME Y</li>
-            </ul>
-        </section>
-        <section class="section">
-            <h3>Mes compétences</h3>
-            <ul>
-                <li>Git</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>PHP</li>
-                <li>SQL</li>
-            </ul>
-        </section>
-        <section class="section">
-            <h3>Ma formation</h3>
-            <p>Un DUT Services et Réseaux de Communication</p>
-        </section>
+        <div id="content">
+            <section class="section">
+                <h3>Mon expérience</h3>
+                <ul>
+                    <li>2013 à Aujourd'hui : Développeur dans un organisme X</li>
+                    <li>2010 à 2012 : Développeur dans une PME Y</li>
+                </ul>
+            </section>
+            <section class="section">
+                <h3>Mes compétences</h3>
+                <ul>
+                    <li>Git</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>PHP</li>
+                    <li>SQL</li>
+                </ul>
+            </section>
+            <section class="section">
+                <h3>Ma formation</h3>
+                <p>Un DUT Services et Réseaux de Communication</p>
+            </section>
+        </div>
         <footer class="section">
             <h4>GNU General Public License v3.0</h4>
         </footer>
