--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <img src="images/Zozor.png" title="Image of Zozor" alt="Image of Zozor"/>
                 <figcaption>Image of Zozor</figcaption>
             </figure>
+            <br/>
+            <audio src="" controls></audio>
+            <br/>
+            <video src="" controls poster=""></video>
             <table>
                 <caption>Table title</caption>
                 <tr>
@@ -60,8 +64,6 @@
                     </p>
                     <input type="submit" value="Send form"/>
                 </fieldset>
-
-                
             </form>
         </section>
         <footer>
